--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="password">Password</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="create_account">Create Account</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="name">Name</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="already_have_account_log_in">Already have account? Log in</string>
 </resources>
